# RustOS

./: Cargo.toml  Makefile
boards/: Cargo.toml
boards/src/: lib.rs  mod.rs  qemu.rs
crates/pagetable/: Cargo.toml
crates/pagetable/src/: address.rs  lib.rs  rv39.rs
crates/trap/: Cargo.toml
crates/trap-macro/: Cargo.toml
crates/trap-macro/examples/: test.rs
crates/trap-macro/src/: lib.rs  riscv.rs
crates/trap/src/: lib.rs  riscv.rs
drivers/chardev/: Cargo.toml
drivers/chardev/src/: lib.rs  ns16550a.rs
drivers/plic/: Cargo.toml
drivers/plic/src/: lib.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: config.rs  console.rs  kvm.rs  lang.rs  main.rs  trap.rs
kernel/src/hal/: mod.rs
kernel/src/mm/: frame_allocator.rs  heap_allocator.rs  mod.rs
kernel/src/sync/: mod.rs  up.rs
script/: linker-qemu.ld
