[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
riscv = "0.12.1"
buddy_system_allocator = "0.11.0"
pagetable = { path = "../crates/pagetable" }
chardev = { path = "../drivers/chardev" }
plic = { path = "../drivers/plic" }
spin = { workspace = true }
